# TemGymCore

./: .coveragerc  .gitignore  README.md  conftest.py  grads_test.py  main_gui.py  pyproject.toml  solvefourdstemgeneral.ipynb  tox.ini
.github/workflows/: ci.yml
fourdstem_example/: .gitignore  demo.ipynb  diffraction_grating_camera_length.ipynb  fit_descan.ipynb  four_corners.ipynb  generate.ipynb  generate_three_camera_lengths.ipynb  interactive.ipynb  interactive.py  optimiser.ipynb  params.json  params_3cls.json  run_udf.py  stem_overfocus.ipynb
ode/: biprism_optim.ipynb  biprism_optim_taylor.ipynb  electrostatic_lens_ode.ipynb  electrostatic_lens_optim.ipynb  electrostatic_lens_taylor.ipynb  point_source.ipynb  point_source_optim.ipynb  point_source_taylor.ipynb
oth/: ray_structure_options.ipynb  specific_grad.ipynb
src/jaxgym/: __init__.py  components.py  coordinate_transforms.py  coordinates.py  field.py  grid.py  ode.py  plot.py  propagate.py  propagator.py  ray.py  run.py  source.py  stemoverfocus.py  taylor.py  transfer.py  tree_utils.py  utils.py
src/microscope_calibration/: components.py  fitting.py  generate.py  interactive.py  model.py  parameters.py  stemoverfocus.py  udf.py
src/temgym-gui/: cli.py
src/temgym_core/: __init__.py  components.py  coordinate_transforms.py  field.py  grid.py  plot.py  propagator.py  ray.py  run.py  source.py  taylor.py  transfer.py  utils.py
src/temgym_ui/: __init__.py  config_model.py  rays.py  run.py  shapes.py  utils.py  widgets.py  window.py
src/ui/: visualise_rays.ipynb
tests/: test_aberrations.py  test_component.py  test_components.py  test_fitting.ipynb  test_fitting.py  test_propagate.py  test_rays.py  test_stemoverfocus.py  test_transfer.py  test_udf.py
