[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/temgym_core",
]
only-packages = true

[project]
name = "temgym-core"
version = "0.0.1"
authors = [
  { name="David Landers", email="davidlandersresearch@gmail.com" },
  { name="Matthew Bryan", email="matthewbryan52@gmail.com" },
  { name="Dieter Weber", email="d.weber@fz-juelich.de" },
]
description = "An differentiable TEM ray tracing package"
readme = "README.md"
keywords=["electron microscopy", "virtual twin"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12", 
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
  'jax',
  'jax_dataclasses',
  'numpy',
  'numba',
  'typing-extensions',
]

[project.urls]
"Homepage" = "https://github.com/TemGym/TemGymCore"
